dnl Process this file with autoconf to produce a configure script.
rm -f config.cache

AC_INIT(mokowm-input-method-framework-ecore, 0.1.0, daniele.athome@gmail.com)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.in)
AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_ISC_POSIX

AM_INIT_AUTOMAKE(1.6 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_PROG_CXX
AC_C_BIGENDIAN
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)
AC_HEADER_SYS_WAIT

AC_LIBTOOL_WIN32_DLL
define([AC_LIBTOOL_LANG_F77_CONFIG], [:])dnl
AC_PROG_LIBTOOL

VMAJ=`echo $PACKAGE_VERSION | awk -F. '{printf("%s", $1);}'`
VMIN=`echo $PACKAGE_VERSION | awk -F. '{printf("%s", $2);}'`
VMIC=`echo $PACKAGE_VERSION | awk -F. '{printf("%s", $3);}'`
SNAP=`echo $PACKAGE_VERSION | awk -F. '{printf("%s", $4);}'`
version_info=`expr $VMAJ + $VMIN`":$VMIC:$VMIN"
AC_SUBST(version_info)

PKG_CHECK_MODULES(EDEPS, [
  eina
  ecore
  ecore-imf ],
  [ have_edeps="yes" ],
  [ have_edeps="no" ]
)

if test "x$have_edeps" != "xyes"; then
  AC_MSG_ERROR(mokowm-input-method-framework-ecore requires ecore, ecore-imf, ecore-x development files)
fi

AC_SUBST(EDEPS_LIBS)
AC_SUBST(EDEPS_CFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
])
